--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@graphql-tools/schema": "^8.3.5",
     "apollo-server-core": "^3.6.5",
     "apollo-server-express": "^3.6.5",
+    "apollo-server-plugin-response-cache": "3.5.2",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "graphql": "^16.3.0",
