--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
+  "functions": {
+    "dist/index.js": {
+      "memory": 3008,
+      "maxDuration": 30
+    }
+  },
   "rewrites": [{ "source": "/(.*)", "destination": "/api" }],
   "headers": [
     {
