--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "ncc build api/index.js -o dist",
+    "build": "ncc build src/index.js -o api",
     "dev": "nodemon dev"
   },
   "dependencies": {
